Changes after first project review.